--- a/frontend/src/forstudent/components/courses/courses.css
+++ b/frontend/src/forstudent/components/courses/courses.css
@@ -4,18 +4,20 @@
     align-items: center;
     justify-content: center;
     gap: 2%;
+    margin-bottom: 40px;
+    height: 100%;
 }
 .coursecard-each{
     width: 220px;
     height: 150px;
     padding-top: 40px;
-    padding-bottom: 40px;
+    padding-bottom: 160px;
 }
 @media screen and (max-width:300px) {
     .coursecardcontainer{
         padding-top: 0px;
         padding-bottom: 0px;
-        gap: 0%;
+        gap: 2%;
     }
     .coursecard-each{
         width: 100%;
